:fire: feat: swagger API
